# sugar-sugar

./: .gitignore  AGENTS.md  pyproject.toml
assets/: lang.css  mobile.css  orientation.css  share.css
backup/: README.md  backup-input.sh
backup/systemd/: backup-sugar-sugar.service  backup-sugar-sugar.timer
scripts/: _smoke_share.py
sugar_sugar/: app.py  config.py  data.py  encouragement.py  share_store.py  static_markdown.py
sugar_sugar/components/: glucose.py  navbar.py  share.py  startup.py
sugar_sugar/translations/: ui.de.yml  ui.en.yml  ui.es.yml  ui.fr.yml  ui.ro.yml  ui.ru.yml  ui.uk.yml  ui.zh.yml
tests/: test_navbar.py
