[project]
name = "sugar-sugar"
version = "0.1.1"
description = "A data access and visualization tool for glucose monitoring data"
authors = [
    {name = "Anton Kulaga", email = "Antonkulaga@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "typer>=0.19.2",
    "numpy>=2.3.0",
    "pycomfort>=0.0.18",
    "dotenv>=0.9.9",
    "eliot>=1.15.0",
    "i18nice[yaml]>=0.16.0",
    "markdown>=3.10.2",
    "kaleido>=1.2.0",
]

[project.scripts]
start = "sugar_sugar.app:cli_main"
chart = "sugar_sugar.app:chart_main"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sugar_sugar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
